# Final_Project

./: .editorconfig  CMakeLists.txt  FTXUI_SETUP.md  Final_Project.sln  Final_Project.vcxproj  Final_Project.vcxproj.filters  INSTALLATION_COMPLETE.md  README.md  README_INTERFACES.md  VS2022_README.md  build.bat  concept.md  install_ftxui.ps1  main.cpp
data/: users.txt
managers/: AuthManager.h  DataManager.h  GameController.h  InventoryController.h  WorldController.h
models/: ItemModel.h  PlayerModel.h  WorldModel.h
saves/: a_aa.txt  aaaa_2.txt  global_storage.txt  new_theif.txt  test_chara1.txt  test_y1.txt  test_y2.txt
scenes/: GameScene.h  MainScene.h
ui/: BackpackUI.h  EnhancementUI.h  EquipmentUI.h  MapUI.h  ShopUI.h  StatsUI.h  StorageUI.h
